--- a/index.html
+++ b/index.html
@@ -6,30 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Document</title>
+    <title>Coder</title>
 </head>
-<body> 
+ 
     <div class="flex-container">
         <form class="form">
             <div class="form__section">
-                <input type="email" class="form__imput" placeholder="Email del usuario"required>
+                <input type="number" class="form__imput" placeholder="Monto Inicial"required>
             </div>
             <div class="form__section">
-                <input type="password" class="form__imput" placeholder="Contraseña"required>
-            </div>
-            <div class="form__section">
-                <input type="text" class="form__imput" placeholder="Asunto"required>
-            </div>
-            <div class="form__section">
-                <textarea class="form__imput" placeholder="Indique un resumen sobre el problema"required></textarea>
+                <input type="number" class="form__imput" placeholder="Descuentos"required>
             </div>
             <div class="buttom__section">
-                <input type="submit" class="form__imput" value="Enviar">
+                <input type="submit" class="form__imput" value="Calcular">
             </div>
         </form>    
         <div class="form-image">
             <div>
-                <img src="https://i.blogs.es/e2ccc8/gmail-logo-/450_1000.jpg">
+                <img src="https://prints.ultracoloringpages.com/6ece6ff30d5b7513d952a35a7ab5e058.png">
             </div>    
         </div>
     </div>    
